@@ -7,28 +7,6 @@ module Kiba
       module FilterRows
         ::FilterRows = Kiba::Extend::Transforms::FilterRows
 
-        # matches across the entire literal content of a field.
-        # i.e. does not split into multivalues before matching
-        class FieldMatchRegexp
-          def initialize(action:, field:, match:)
-            @action = action
-            @field = field
-            @match = Regexp.new(match)
-          end
-
-          # @private
-          def process(row)
-            val = row.fetch(@field)
-            test = val ? val.match?(@match) : false
-            case @action
-            when :keep
-              test ? row : nil
-            when :reject
-              test ? nil : row
-            end
-          end
-        end
-
         class FieldPopulated
           def initialize(action:, field:)
             @action = action
